# face-recognition-deepstream-cpp-tensorrt

./: .gitignore  README.md
deepstream/: CMakeLists.txt  README.md  config.json  config_infer_detection.txt  config_infer_recognition.txt  deepstream_app_config.txt
deepstream/config/: embedding.json
deepstream/nvdsinfer_customparser/: CMakeLists.txt  nvdsinfer_customsparsebbox_Retinaface.cpp
deepstream/src/: CMakeLists.txt  common.cpp  common.h  cosine_similarity.cpp  deepstream_app.cpp  deepstream_app.h  deepstream_app_config_parser.cpp  deepstream_app_main.cpp  logging.hpp
deepstream/src/gst-dsfacesearch/: CMakeLists.txt  gstdsfacesearch_optimized.cpp  gstdsfacesearch_optimized.h
deepstream/src/plugins/: deepstream_dsfacesearch.cpp  deepstream_dsfacesearch.h
tensorrt/: CMakeLists.txt  README.md
tensorrt/retinaface/: CMakeLists.txt  logging.h  main.cpp  retinaface.cpp  retinaface.h
tensorrt/src/: CMakeLists.txt  app.cpp  arcface.cpp  arcface.h  common.cpp  common.h  config.json  cosine_similarity.cpp  cosine_similarity.h  db.cpp  db.h  retinaface.cpp  retinaface.h  test.db  test.ipynb  webclient.cpp
tensorrt/src/test/: CMakeLists.txt  test_client.cpp  test_curl.cpp  test_decorator.cpp  test_embedding.cpp  test_retinaface.cpp
